--- a/Ray.Notification.Core/Ray.Notification.Core.csproj
+++ b/Ray.Notification.Core/Ray.Notification.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39463B27-896B-497C-A032-A1AC062FE3A3}</ProjectGuid>
+    <ProjectGuid>{C00E2AA5-B1D5-4773-95DA-0503A4B00FAD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ray.Notification.Common</RootNamespace>
-    <AssemblyName>Ray.Notification.Common</AssemblyName>
+    <RootNamespace>Ray.Notification.Core</RootNamespace>
+    <AssemblyName>Ray.Notification.Core</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,16 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp, Version=106.11.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.11.7\lib\net452\RestSharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,22 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Convertors\PersianCharacterConvertor.cs" />
-    <Compile Include="Convertors\PersianDateConvertor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultModel.cs" />
-    <Compile Include="Services\DatabaseService\DatabaseService.cs" />
-    <Compile Include="Services\DatabaseService\LoginService.cs" />
-    <Compile Include="Exceptions\MessageException.cs" />
-    <Compile Include="Exceptions\WebConnectorException.cs" />
-    <Compile Include="Services\WebConnector\IWebConnectorService.cs" />
-    <Compile Include="Services\WebConnector\WebConnectorService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utils\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
