--- a/Ray.Notification.Wpf/packages.config
+++ b/Ray.Notification.Wpf/packages.config
@@ -1,15 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="6.2.0" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.6" targetFramework="net472" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
