--- a/Ray.Notification.Wpf/Ray.Notification.Wpf.csproj
+++ b/Ray.Notification.Wpf/Ray.Notification.Wpf.csproj
@@ -368,7 +368,9 @@
   <ItemGroup>
     <Resource Include="eoa.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Setup\notification.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
